--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/themes.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-SEU_ID_AQUI" crossorigin="anonymous"></script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5705824723265662"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,7 @@
         <div class="ad-container">
   <ins class="adsbygoogle"
        style="display:block"
-       data-ad-client="ca-pub-SEU_ID_AQUI"
+       data-ad-client="ca-pub-5705824723265662"
        data-ad-slot="1234567890"
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
@@ -86,7 +86,7 @@
             <div class="ad-container">
   <ins class="adsbygoogle"
        style="display:block"
-       data-ad-client="ca-pub-SEU_ID_AQUI"
+       data-ad-client="ca-pub-5705824723265662"
        data-ad-slot="0987654321"
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
